--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 # Add your Supabase credentials here
-VITE_SUPABASE_URL=your_supabase_url_here
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+# Replace these with your actual Supabase project URL and anon key from your Supabase dashboard
+# You can find these at: https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
+
+# Example format:
+# VITE_SUPABASE_URL=https://your-project-ref.supabase.co
+# VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
+VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.your-actual-anon-key-here
