--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
-node_modules
+# Node modules
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output
+dist/
+build/
+out/
+
+# Vite
+.vite/
+
+# Coverage
+coverage/
+
+# OS
+.DS_Store
+
+# IDEs
+.vscode/
+.idea/
+
+# Env files
+.env
+.env.*
+
+# Misc
+*.local
+
+
