--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite dev",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && wrangler deploy"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
@@ -17,6 +18,7 @@
     "recharts": "^2.8.0"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.5.0",
     "@eslint/config-array": "^0.20.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -30,6 +32,7 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "wrangler": "^4.19.1"
   }
 }
