--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,4 @@
 {
-  "name": "cloudflare-vite-get-started",
-  "compatibility_date": "2025-04-03",
-  "main": "./src/index.ts"
+  "name": "xtreme-falcons",
+  "compatibility_date": "2025-04-03"
 }
