Add main entry point to wrangler.jsonc and create deploy configuration file
- Added "main" entry to wrangler.jsonc pointing to ./src/main.tsx.
- Introduced new deploy configuration file at .wrangler/deploy/config.json.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,4 +1,5 @@
 {
   "name": "xtreme-falcons",
-  "compatibility_date": "2025-04-03"
+  "compatibility_date": "2025-04-03",
+  "main": "./src/main.tsx"
 }
