--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
+    "supabase": "^2.24.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^6.3.5",
