--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && wrangler deploy"
+    "deploy": "npm run build && wrangler deploy",
+    "gen-types": "npx supabase gen types typescript --local > src/types/database.types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-router": "^1.121.27",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
