--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy": "npm run build && wrangler deploy",
-    "gen-types": "npx supabase gen types typescript --local > src/types/database.types.ts"
+    "gen-types": "npx supabase gen types typescript --local > src/types/database.generated.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.5.0",
     "@eslint/config-array": "^0.20.0",
+    "@tanstack/router-vite-plugin": "^1.121.29",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
+    "type-fest": "^4.41.0",
     "typescript": "^5.0.2",
     "vite": "^6.3.5",
     "wrangler": "^4.19.1"
