--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-router": "^1.121.27",
     "lucide-react": "^0.263.1",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.5.0",
