--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.8.0",
-    "xlsx": "^0.18.5"
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.5.0",
